# RestfulBookerTests

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  summary.json
.github/workflows/: tests.yml
src/restful_booker/clients/: auth_client.py  base_client.py  booking_client.py
src/restful_booker/config/: settings.py
src/restful_booker/models/: auth.py  booking.py
src/restful_booker/utils/: data_factory.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/booking/: test_api_crud.py
tests/health/: test_ping.py
widgets/: charts.json  nav.json  pie_chart.json  search-index.json  timeline.json  tree-filters.json  tree.json
widgets/default/: nav.json  search-index.json  statistic.json  tree.json
