[project]
name = "restfulbookertests"
version = "0.1.0"
description = "Portfolio-grade API testing framework for Restful-Booker using Playwright Python, Pydantic, pytest, and Allure."
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.23.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/restful_booker"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
]
testpaths = ["tests"]
markers = [
    "smoke: minimal health/auth checks",
    "crud: full create-read-update-delete coverage",
    "auth: token generation scenarios",
    "negative: failure, unauthorized, and edge-case scenarios",
]
log_cli = true
log_cli_level = "INFO"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["restful_booker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disable_error_code = ["annotation-unchecked"]
